--- a/webapp/view/Object.view.xml
+++ b/webapp/view/Object.view.xml
@@ -434,7 +434,7 @@
 					<m:ToolbarSpacer/>
 					<!--<m:Button text="Accept" type="Emphasized" id="btn-01" press="onPressAccptButton"/>-->
 					<!--<m:Button id="idCreateFGMatrl" type="Ghost" enabled="true" press="onFGMatPress" text="Create FG Material"/>-->
-					<m:Button id="idSubmit" enabled="true" text="Submit" type="Emphasized" press="handleSubmitPress"/>
+					<!--<m:Button id="idSubmit" enabled="true" text="Submit" type="Emphasized" press="handleSubmitPress"/>-->
 					<!--<m:Button icon="sap-icon://sys-cancel" type="Ghost" press="onCancelPress" text="{i18n>cncl}"/>-->
 				</m:content>
 			</m:OverflowToolbar>
